--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/index.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/index.html
@@ -10,7 +10,7 @@
     <base href="/" />
     <link rel="icon" href="/assets/img/favicon.ico" />
     <!-- <title>VUSP | Ventanilla Única del Sector Producción</title> -->
-    <title>VSP | Ventanilla del Sector Producción</title>
+    <title>Login Unico del Sector Producción</title>
     <!-- Bootstrap core CSS -->
     <!-- <link href="/assets/js/bootstrap-3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="/assets/fonts/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
